Fix GC log options